Fixed Best Discounts Service + products now display discount price